--- a/.github/workflows/rosti_deploy.yml
+++ b/.github/workflows/rosti_deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build
         run: |
           npm run build
-          ./node_modules/.bin/next export
+          # Removed next export line
       - name: Setup Nginx
         run: |
           cat << EOF > rosti.nginx.conf
